| Summary: | ASTERISK-20606: Wrong confbridge behavior when participants enter simultaneously | ||||
| Reporter: | Eugenia Belova (eleo) | Labels: | |||
| Date Opened: | 2012-10-25 08:59:36 | Date Closed: | 2012-12-13 14:59:45.000-0600 | ||
| Priority: | Critical | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_confbridge | ||
| Versions: | 10.9.0 11.0.0-beta1 11.0.0-beta2 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) jira_asterisk_20606_v10.patch ( 1) new_simuljoin.diff | |||
| Description: | We test confbridge and detected next situations
The first one is when participants enter simultaneously into not existent conference. Moh plays in one of the channels. We detected this behavior in 11.0.0-rc1/2 versions. The second one is when there is a participant in the conference (he is listening to the moh) and two other participants enter the same conference simultaneously. The first participant continues to listen to the moh. We detected this behavior in 10.9.0 version. | ||||
| Comments: | By: Jonathan Rose (jrose) 2012-10-25 14:46:08.995-0500 Did you actually test this in 11.0.0-beta2? I ask this because 11.0.0-beta2 contains a commit r374657 which was aimed specifically at these sorts of problems that 10.9.0 does not. This same fix is also in more recent versions (unreleased) of 10 as well. EDIT: Oh, I get it, this is two distinct bugs, one of which affects the new way of doing things. EDIT: Behavior confirmed for the 11.0.0 bug. By: Jonathan Rose (jrose) 2012-10-25 15:34:55.681-0500 Please check this patch against the 11.0.0-beta2 bug you mentioned. Also, could you confirm whether or not the 10.9.0 bug occurs in the 11.0.0-beta2 bug with or without this patch? Thanks. By: Eugenia Belova (eleo) 2012-10-26 08:21:29.217-0500 After applying this patch to 11.0.0-beta2, we didn't detect this bug. Thank you, Jonathan. By: Matt Jordan (mjordan) 2012-10-28 16:04:33.053-0500 Closing out as fixed in 11.0.0/10.10.0. By: Eugenia Belova (eleo) 2012-10-29 01:40:58.219-0500 We checked, this bug isn't fixed in 11.0.0 By: Matt Jordan (mjordan) 2012-10-29 11:44:23.692-0500 Reopened. While the patch may work around the bug, it may not be the correct solution. To clarify, which of these two issues is still present in 10.10.0 and/or 11.0.0? By: Eugenia Belova (eleo) 2012-10-30 08:32:10.837-0500 File apps/app_confbridge.c is not patched in 11.0.0. We think this is the reason why this bug exists. The bug is: participants enter simultaneously into not existent conference and moh plays in one of the channels. Patching the file apps/app_confbridge.c fixed this issue. By: Matt Jordan (mjordan) 2012-10-31 17:10:57.609-0500 That's not what I asked. The patch attached to this issue is most likely not the correct solution to this problem, and will not be committed. However, in both versions, the behavior of MOH with respect to entering participants changed greatly. Your original description states that you tested against 10.9.0. {quote} The first one is when participants enter simultaneously into not existent conference. Moh plays in one of the channels. We detected this behavior in 11.0.0-rc1/2 versions. The second one is when there is a participant in the conference (he is listening to the moh) and two other participants enter the same conference simultaneously. The first participant continues to listen to the moh. We detected this behavior in 10.9.0 version. {quote} To restate my question: If you test with with either 10.10.0 or 11.0.0, are either of these problems still present? If so, which ones? By: Eugenia Belova (eleo) 2012-11-02 07:54:13.525-0500 We tested 10.10.0 and 11.0.0 The first issue (when participants enter simultaneously into not existent conference and moh plays in one of the channels) is still present in both of versions. The second issue wasn't detected in any of these versions. By: Richard Mudgett (rmudgett) 2012-12-06 18:53:41.775-0600 [^jira_asterisk_20606_v10.patch] - This patch is the first revision on the reviewboard review for this issue. https://reviewboard.asterisk.org/r/2232/ By: Clint Davis (clint.davis) 2012-12-15 18:16:25.311-0600 I have been testing this on: 11.2.0-rc1 and can easily still recreate this issue. -- Executing [1@Conf-App:70] ConfBridge("SIP/voxbone.com-0000004a", "3440,,,admin_menu") in new stack -- Started music on hold, class 'default', on SIP/voxbone.com-0000004a -- Stopped music on hold on SIP/voxbone.com-0000004a -- <SIP/voxbone.com-0000004a> Playing 'conf-placeintoconf.slin' (language 'en_AU_female') -- Executing [1@Conf-App:70] ConfBridge("SIP/voxbone.com-0000004b", "3440,,,admin_menu") in new stack -- <SIP/voxbone.com-0000004b> Playing 'conf-onlyone.slin' (language 'en_AU_female') -- <SIP/voxbone.com-0000004a> Playing 'confbridge-join.slin' (language 'en_AU_female') -- <Bridge/0x7f099803b1b8-input> Playing 'confbridge-join.slin' (language 'en') -- Started music on hold, class 'default', on SIP/voxbone.com-0000004a -- <SIP/voxbone.com-0000004b> Playing 'confbridge-join.slin' (language 'en_AU_female') -- <Bridge/0x7f099803b1b8-input> Playing 'confbridge-join.slin' (language 'en') Results in: one call goes to "You are the first ..", hear some beeps for the join tones, then goes to MOH. second joins normally, also hear join tones (two of them) but can not hear the first caller as on MOH. By: Joshua C. Colp (jcolp) 2012-12-15 18:45:24.036-0600 This issue was fixed and closed after 11.2.0-rc1 was released. It does not contain the fix. By: Clint Davis (clint.davis) 2012-12-15 20:49:57.631-0600 Yep, I just built from trunk and the issue is resolved :-) | ||||